Update PersonController to get people by url
